* Support for fanout in multiplexing (needed by some DBBC3 modes), both in library in vmux (very lightly tested)
* Some minor improvements to some utilities (improved help info, some parameter checking, ...)
* New function: void snprintvdiffilesummary(char *str, int maxLength, const struct vdif_file_summary *sum)


Version 1.0
~~~~~~~~~~~
* ******* NOTE CHANGES TO THE API *********
* Changed parameter in createVDIFHeader (pass size of dataarray not full VDIF frame).
* Changed function of getVDIFEpoch and setVDIFFrameSecond
* Renamed:
	getVDIFMJD
	getVDIFFrameFullSecond -> getVDIFFrameEpochSecOffset
	setVDIFFrameSecond -> setVDIFFrameEpochSecOffset
	setVDIFFrameFull
	setVDIFMJDSec -> setVDIFFrameMJDSec
	getVDIFDMJD -> getVDIFFrameDMJD
	setVDIFTime -> setVDIFFrameTime (and changed functionality)
	setVDIFEpoch -> setVDIFEpochMJD
* Added
	getVDIFFrameMJDSec
	setVDIFEpochTime
* Added new utility printVDIFgaps to examine a VDIF stream for missing data
* vdifmux now fed by a structure.  This allows for safer, faster and more flexible muxing.
* printVDIFheader: when legacy data don't print any EDV info
* multi2singlethreadVDIF: fixed bug where frames with invalid bit set had zero epoch and wrong seconds
* captureUDPVDIF: properly use skipbytes at the front and back of the packet
* Version for DiFX-2.4, Nov 4, 2014

Version 0.6
~~~~~~~~~~~
* Post DiFX-2.3
* Expose getVDIFEpochMJD: returns integer MJD corresponding to start of VDIF epoch
* Add printVDIFheader which will also print contents of EDV1 and EDV3 

Version 0.5
~~~~~~~~~~~
* Fix the 2-bit 16 thread case in the vdifmux function
* 1-bit corner turners now supported: 1, 2, 3, 4, 5, 6, 7, 8 threads
* 2-bit corner turners now supported: 1, 2, 3, 4, 5, 6, 7, 8, 10, 12, 14, 16 threads
* 4-bit corner turners now supported: 1, 2, 3, 4, 5, 6, 7, 8 threads
* 8-bit corner turners now supported: 1, 2, 3, 4, 5, 6, 7, 8, 10, 12, 14, 16 threads
* add corner turn test program: testcornerturners